[project]
name = "reps-new"
version = "0.4.0"
description = "Mozilla Release Engineering Project Standard"
requires-python = ">=3.8"
authors = [
  { name = "Mozilla Release Engineering", email = "release+reps@mozilla.com" }
]
classifiers = [
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Topic :: System :: Installation/Setup",
]
readme = "README.md"

dependencies = [
  "pre-commit",
  "taskcluster-taskgraph",
  "uv",
]

[project.urls]
Repository = "https://github.com/mozilla-releng/reps"
Issues = "https://github.com/mozilla-releng/reps/issues"

[dependency-groups]
dev = [
  "copier",
  "pre-commit",
  "pytest",
  "requests",
  "uv",
]

[tool.hatch.build.targets.wheel]
packages = ["reps"]

[tool.pytest.ini_options]
testpaths = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
